--- a/contact.html
+++ b/contact.html
@@ -299,8 +299,8 @@
               <ul class="link-list">
                 <li><a href="#history_section">History Of The College</a></li>
                 <li><a href="gallery.html">Photo Galleries</a></li>
-                <li><a href="">Our Policies</a></li>
-                <li><a href="">Work For Us</a></li>
+                <li><a href="assets/pdf/complaint Policy.docx.pdf">Our Policies</a></li>
+                <li><a href="assets/pdf/Learner guidance induction material.docx.pdf">Work For Us</a></li>
                 <li><a href="">How To Find Us</a></li>
               </ul>
             </div>
