--- a/doctorate.html
+++ b/doctorate.html
@@ -92,7 +92,7 @@
                                 <li>
                                     <a href="#">About Us</a>
                                     <ul class="nav-dropdown nav-submenu">
-                                        <li><a href="why-lcm.html">Why Oxford</a></li>
+                                        <li><a href="why-oxford.html">Why Oxford</a></li>
                                         <!-- <li><a href="study-lcm">Study at Oxford</a></li> -->
                                         <li><a href="our-team.html">Our Team</a></li>
                                     </ul>
@@ -204,8 +204,8 @@
                             <ul class="link-list">
                                 <li><a href="">History Of The College</a></li>
                                 <li><a href="gallery.html">Photo Galleries</a></li>
-                                <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
-                                <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
+                                <li><a href="assets/pdf/complaint Policy.docx.pdf">Our Policies</a></li>
+                                <li><a href="assets/pdf/Learner guidance induction material.docx.pdf">Work For Us</a></li>
                                 <li><a href="">How To Find Us</a></li>
                             </ul>
                         </div>
