--- a/gallery.html
+++ b/gallery.html
@@ -344,8 +344,8 @@
               <ul class="link-list">
                 <li><a href="">History Of The College</a></li>
                 <li><a href="">Photo Galleries</a></li>
-                <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
-                <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
+                <li><a href="assets/pdf/complaint Policy.docx.pdf">Our Policies</a></li>
+                <li><a href="assets/pdf/Learner guidance induction material.docx.pdf">Work For Us</a></li>
                 <li><a href="">How To Find Us</a></li>
               </ul>
             </div>
