--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
               <ul class="link-list">
                 <li><a href="#history_section">History Of The College</a></li>
                 <li><a href="gallery.html">Photo Galleries</a></li>
-                <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit"
+                <li><a href="assets/pdf/complaint Policy.docx.pdf"
                     target="_blank">Our Policies</a></li>
-                <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit"
+                <li><a href="assets/pdf/Learner guidance induction material.docx.pdf"
                     target="_blank">Work For Us</a></li>
                 <li><a href="">How To Find Us</a></li>
               </ul>
