--- a/why-oxford.html
+++ b/why-oxford.html
@@ -88,7 +88,7 @@
                   <a href="#">About Us</a>
                   <ul class="nav-dropdown nav-submenu">
                     <li><a href="why-oxford.html">Why Oxford</a></li>
-                    <li><a href="study-oxford">Our Team</a></li>
+                    <li><a href="our-team.html">Our Team</a></li>
                   </ul>
                 </li>
 
