--- a/Diploma.html
+++ b/Diploma.html
@@ -92,7 +92,7 @@
                                 <li>
                                     <a href="#">About Us</a>
                                     <ul class="nav-dropdown nav-submenu">
-                                        <li><a href="why-lcm.html">Why Oxford</a></li>
+                                        <li><a href="why-oxford.html">Why Oxford</a></li>
                                         <!-- <li><a href="study-lcm">Study at Oxford</a></li> -->
                                         <li><a href="our-team.html">Our Team</a></li>
                                     </ul>
