--- a/our-team.html
+++ b/our-team.html
@@ -93,8 +93,8 @@
                                 <li>
                                     <a href="#">About Us</a>
                                     <ul class="nav-dropdown nav-submenu">
-                                        <li><a href="why-lcm.html">Why Oxford</a></li>
-                                        <li><a href="study-lcm">Our Team</a></li>
+                                        <li><a href="why-oxford.html">Why Oxford</a></li>
+                                        <li><a href="our-team.html">Our Team</a></li>
                                     </ul>
                                 </li>
 
