--- a/index.html
+++ b/index.html
@@ -230,20 +230,20 @@
         <div class="campus-content-col">
           <div class="campus-content">
             <p style="color: rgb(115 132 158)">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Repudiandae consequatur minima perspiciatis veritatis non totam
-              sint. Maxime accusantium enim voluptate quibusdam doloremque et
-              quas architecto nulla odit necessitatibus cum vel ad dolor
-              distinctio nesciunt, cumque non dolorem nisi blanditiis
-              molestiae. Veniam, nihil. Laborum quod earum facilis inventore
-              delectus pariatur enim culpa cumque magnam dignissimos, velit
-              distinctio. Laboriosam explicabo minus illo ea, dicta ex ut
-              cumque labore deleniti nesciunt repellendus sequi quod
-              reiciendis minima nulla, cupiditate aliquam soluta magnam
-              dignissimos consequuntur quisquam temporibus vitae asperiores
-              quasi! Asperiores praesentium porro molestiae aperiam quos.
-              Voluptatum, fuga blanditiis! Quis nostrum distinctio laboriosam
-              nulla molestias.
+              Our vision is to promote educational opportunity and social justice by providing
+              high-quality education and trainings to all who wish to realise their ambitions and
+              fulfil their potential.
+              We are committed to promoting equal opportunities for all and we monitor ourselves
+              to make sure we live up to our ideals.
+              Oxford College is a Community employment and training support providers.
+              We are committed to enriching the lives of all members of the community and to
+              creating new opportunities for them. We have links to a range of community based
+              services and we are experienced at introducing the people we support to a full range
+              of community programmes.
+              The institution caters for all walks of life i.e. from refugees, unemployed and
+              professional of all ages, gender, race and colour. We implement an excellent equal
+              opportunity policy and cater for the social and cultural needs of the local and
+              international population.
             </p>
           </div>
         </div>
