--- a/why-oxford.html
+++ b/why-oxford.html
@@ -95,7 +95,7 @@
                 <li>
                   <a href="#">Admissions</a>
                   <ul class="nav-dropdown nav-submenu">
-                    <li><a href="diploma.html">Diploma</a></li>
+                    <li><a href="Diploma.html">Diploma</a></li>
                     <li><a href="undergraduate.html">Undergraduate</a></li>
                     <li><a href="postgraduate.html">Postgraduate</a></li>
                     <li><a href="doctorate.html">Doctorate</a></li>
