--- a/index.html
+++ b/index.html
@@ -332,12 +332,11 @@
             <h4 class="quick-links-para-text">Quick Links</h4>
             <div class="footer-link mt-45">
               <ul class="link-list">
-                <li><a href="#history_section">History Of The College</a></li>
+                <!-- <li><a href="#history_section">History Of The College</a></li> -->
                 <li><a href="gallery.html">Photo Galleries</a></li>
-                <li><a href="assets/pdf/complaint Policy.docx.pdf"
-                    target="_blank">Our Policies</a></li>
-                <li><a href="assets/pdf/Learner guidance induction material.docx.pdf"
-                    target="_blank">Work For Us</a></li>
+                <li><a href="assets/pdf/complaint Policy.docx.pdf" target="_blank">Our Policies</a></li>
+                <li><a href="assets/pdf/Learner guidance induction material.docx.pdf" target="_blank">Work For Us</a>
+                </li>
                 <li><a href="">How To Find Us</a></li>
               </ul>
             </div>
