--- a/internship.html
+++ b/internship.html
@@ -182,6 +182,9 @@
                     <li> The Oxford college Internship Programme offers students and recent graduates the opportunity to gain direct practical experience with Oxford college work. Internship opportunities are available worldwide.
 
                         When a Oxford college office identifies the need for an intern to support their team, they publish the opportunity, and all eligible candidates can submit their application through our website.
+                        <br>
+                        Internships are a great way to gain short periods of work experience, especially during the summer break. They don't form part of your course, but some sectors will expect to see an internship on your CV before you'll be considered for a role. 
+                        If you impress during an internship, there's a chance you could be offered a position when you leave college.
                         </li>
                    
                 </div>
