--- a/Anti-ragging.html
+++ b/Anti-ragging.html
@@ -200,7 +200,7 @@
                         <h4 class="quick-links-para-text">Quick Links</h4>
                         <div class="footer-link mt-45">
                             <ul class="link-list">
-                                <li><a href="">History Of The College</a></li>
+                                <!-- <li><a href="">History Of The College</a></li> -->
                                 <li><a href="gallery.html">Photo Galleries</a></li>
                                 <li><a href="assets/pdf/complaint Policy.docx.pdf">Our Policies</a></li>
                                 <li><a href="assets/pdf/Learner guidance induction material.docx.pdf">Work For Us</a></li>
