--- a/why-oxford.html
+++ b/why-oxford.html
@@ -360,7 +360,7 @@
             <h4 class="quick-links-para-text">Quick Links</h4>
             <div class="footer-link mt-45">
               <ul class="link-list">
-                <li><a href="#history_section">History Of The College</a></li>
+                <!-- <li><a href="#history_section">History Of The College</a></li> -->
                 <li><a href="gallery.html">Photo Galleries</a></li>
                 <li><a href="https://docs.google.com/document/d/1IscBau6uCB0mXz9BAZmm8E3Q7k4r6FL8/edit">Our Policies</a></li>
                 <li><a href="https://docs.google.com/document/d/1Q3d7IHiJFjq5yIXKxQwdDjUPqpNeESS6/edit">Work For Us</a></li>
